// This file holds the data structures related with the functionality of a sovereign chain header
syntax = "proto3";

package proto;

option go_package = "block";
option (gogoproto.stable_marshaler_all) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "block.proto";

// SovereignChainHeader extends the Header structure with extra fields needed by sovereign chain
message SovereignChainHeader {
  Header  Header = 1;
  bytes   ValidatorStatsRootHash = 2;
  repeated bytes MainChainShardHeaderHashes = 3;
}
